[package]
authors = ["Scott Godwin <sgodwincs@gmail.com>"]
edition = "2018"
name = "rtsp"
version = "0.1.0"

[[bench]]
harness = false
name = "decode"

[[bench]]
harness = false
name = "encode"

[[bench]]
harness = false
name = "uri"

[dependencies]
ascii = "0.8.6"
bytes = "0.4.5"
chrono = "0.4.0"
futures = "0.1.20"
itertools = "0.7.8"
lazy_static = "0.2.10"
ordered-multimap = "0.2.1"
rand = "0.5.2"
regex = "0.2.2"
tokio-executor = "0.1.1"
tokio-io = "0.1.6"
tokio-tcp = "0.1.0"
tokio-timer = "0.2.3"
uriparse = "0.4.0"

[dev-dependencies]
tokio = "0.1.6"
criterion = "0.2.5"
