[package]
authors = ["Scott Godwin <sgodwincs@gmail.com>"]
edition = "2018"
name = "rtsp"
version = "0.1.0"

[[bench]]
harness = false
name = "decode"

[[bench]]
harness = false
name = "encode"

[[bench]]
harness = false
name = "uri"

[dependencies]
bytes = "0.4.12"
chrono = "0.4.6"
futures = "0.1.25"
itertools = "0.8.0"
lazy_static = "1.3.0"
ordered-multimap = "0.2.1"
rand = "0.6.5"
tokio-codec = "0.1.1"
tokio-executor = "0.1.6"
tokio-io = "0.1.12"
tokio-tcp = "0.1.3"
tokio-timer = "0.2.10"
uriparse = "0.6.0"
fnv = "1.0.6"
linked_hash_set = "0.1.3"

[dev-dependencies]
tokio = "0.1.17"
criterion = "0.2.5"
